feat: Introduce new controllers and DTOs for ApplicationService, ApprovalRequest, and ServiceShare, enhancing service management capabilities. Implement team-based access control in repository ports and MongoDB adapters, ensuring secure data access. Update existing services to utilize Instant for timestamps and improve filtering capabilities across various entities. Refactor related services and repositories for consistency and enhanced functionality.